# ComfyUI-BAGEL-NoFlashAttention

./: AI_MAKE_DEBUG_INSTRUCTIONS.md  AI_MAKE_WINDOWS_OPTIMIZATION_README.md  README.md  __init__.py  flash_attn_compat.py  inferencer.py  model_utils.py  node.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: bagel_image_edit.json  bagel_image_editing.json  bagel_image_understanding.json  bagel_text_to_image.json
modeling/bagel/: bagel.py  qwen2_navit.py  siglip_navit.py
modeling/qwen2/: configuration_qwen2.py  modeling_qwen2.py
